--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -3,7 +3,7 @@
   organization: Rancher Labs
   year: 2020
   summary:  <p>Certification Date - June 10, 2020<br>
-               Candidate ID - Va22a11b07c734d9dba6c9a6cc7749bcb<br>
+               Certification ID - Va22a11b07c734d9dba6c9a6cc7749bcb<br>
 - award: VMware Certified Professional 6 - Data Center Virtualization
   organization: (VCP6-DCV), VMware
   year: 2017
