--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,12 +2,12 @@
 # DevOps
 - company: Aptargroup, Inc
   position: DevOps Consultant
-  duration: Jan, 2020 &mdash; Jan 2020
-  summary: DevOps consultant
+  duration: Jan, 2020 &mdash; Present
+  summary: CI/CD, Legacy and actual software management/deploy, Kubernetes infrastructure, application monitoring.
 # DevOps
 - company: Aesys
   position: DevOps Consultant
-  duration: Jan, 2020 &mdash; Jan 2020
+  duration: Jan, 2020 &mdash; Present
   summary: DevOps consultant
 # SysAdmin
 - company: IMM Hydraulics S.p.a
