--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ resume_contact_email:           "tupone.mattia@gmail.com"
 resume_header_contact_info: "Lanciano (CH), Italy | tupone.mattia@gmail.com"
 resume_header_intro: "<p>I'm a young DevOps based in Italy with the passion for IT systems and coding.
 Moving across servers, code, and deployments, I started working as a professional in 2016 gaining and maturing experience
-day-by-day, always looking for new technologies and methods.<br>
-Experienced and certified by VMware on virtualization, by Rancher on Kubernetes clusters management.<br>
+day-by-day, always looking for new technologies and methods.<br><br>
+Experienced and certified by VMware on virtualization, by Rancher on Kubernetes clusters management.<br><br>
 Let's config, deploy and destroy. Give me a shell and I'll be happy with it.<br>
 </p>"
 
