--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -12,7 +12,7 @@
 # SysAdmin
 - company: IMM Hydraulics S.p.a
   position: SysAdmin
-  duration: Feb, 2018 &mdash; Jan 2020
+  duration: Feb, 2018 &mdash; Jan, 2020
   summary: VMWare and general infrastructure management, internal systems developer
 
 # SysAdmin/DevOps
