--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -12,7 +12,7 @@
   description: <ul class="resume-item-list">
     <li>Zabbix;</li>
     <li>Netdisco;</li>
-    <li>Prometheus/Grafana</li>
+    <li>Prometheus/Grafana.</li>
     </ul>
 
 - skill: Networking
@@ -30,8 +30,8 @@
     <li>Python;</li>
     <li>PHP;</li>
     <li>Bootstrap, Wordpress;</li>
-    <li>Bash and Python scripting.</li>
-    <li>Basic knowledge of C, C#, C++;</li>
+    <li>Bash and Python scripting;</li>
+    <li>Basic knowledge of C, C#, C++.</li>
     </ul>
 
 - skill: Databases
@@ -75,5 +75,5 @@
   description: <ul class="resume-item-list">
     <li>Kafka;</li>
     <li>Sring;</li>
-    <li>Basic SAP knowledge</li>
+    <li>Basic SAP knowledge.</li>
     </ul>
