Adjust projects section

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,16 +1,9 @@
-# Projects
-# uncomment the urls if you wish to display them, and add your own URL
+- project: Codeforces++
+  url: https://cf-pp.herokuapp.com
+  github: https://github.com/alvinpiter/codeforces-plus-plus
+  description: Codeforces is one of the largest competitive programming platform in the world. They host weekly programming contest and a collection of algorithmic problems which user can use to practice. Codeforces++ is a tool that extends Codeforces functionality. This app is developed using React framework. Through this project I learned the basic of React framework such as breaking down user interface to small components and aggregating API responses to provide insightful result.
 
-# jazznotes.io
-- project: jazznotes.io
-  role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
-  # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
-
-# Springfield Community Outreach Group
-- project: Springfield Community Outreach Group
-  role: Co-Founder & Organizer
-  duration: 2007 &mdash; Present
-  # url: "#"
-  description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
+- project: JavaScript Online Games
+  url: https://jsog.herokuapp.com
+  github: https://github.com/alvinpiter/js-online-games
+  description: JSOG (JavaScript Online Games) is a platform where people can play games with their friends. I've implemented 3 games in JSOG, they are Tic-Tac-Toe, Reversi, Multiplayer Sudoku. The client side of JSOG is developed using React framework, while the server side is developed using Express and Socket.IO. Through this project I learned how to use <u> Jest </u> for writing unit tests.
