--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ resume_section_skills:          true
 resume_section_recognition:     true
 resume_section_links:           true
 resume_section_associations:    true
+resume_section_achievements:    true
 # resume_section_interests:       true
 
 # Resume social links
