--- a/_data/achievements.yml
+++ b/_data/achievements.yml
@@ -11,4 +11,4 @@
 - event: ONMIPA
   result: Silver medal
   year: 2014
-  description: ONMIPA (Olimpiade Nasional Matematika dan Ilmu Pengetahuan Alam) is a math and science olympiad held by Ministry of Education. I won silver medal in physics.
+  description: ONMIPA (Olimpiade Nasional Matematika dan Ilmu Pengetahuan Alam) is a math and science olympiad held by Ministry of Education. I participated in physics category.
