--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,7 @@
-# Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- course: Teknik Informatika (Unfinished)
+  uni: Universitas Surabaya
+  year: 2012 &mdash; 2016
   awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
-
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+    - award: Member of competitive programming team
+    - award: Member of science olympiad team
+    - award: Problem setter in programming contest for high school students held by the faculty
