--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Alvin Piter"
-resume_title:                   "Software Engineer"
+resume_title:                   "About Me"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "alpiter10@gmail.com"
@@ -21,12 +21,14 @@ display_header_contact_info:    "true"
 
 resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
 
+resume_header_intro: "<p>I am a software engineer previously work for Bukalapak as backend engineer. My interests are including, but not limited to, software engineering, algorithms and data structures, and teaching. I am currently seeking an employment as frontend engineer, preferably from a company which use React framework. </p>"
+
 # Decide which sections to use
 # comment out to hide
 resume_section_experience:      true
 resume_section_education:       true
 resume_section_projects:        true
-resume_section_skills:          true
+# resume_section_skills:          true
 resume_section_achievements:    true
 # resume_section_interests:       true
 
