--- a/_data/achievements.yml
+++ b/_data/achievements.yml
@@ -6,7 +6,7 @@
 - event: ICPC Asia Jakarta Regional Contest
   result: Qualified to the onsite round
   year: 2012 - 2015
-  description: ICPC is a competitive programming contest for teams (of 3) held by Bina Nusantara University. Top 50 teams from qualification round (called Indonesia National Contest) will be qualifed to the onsite round. My peak performance in the onsite round is being in 30th place.
+  description: ICPC is a competitive programming contest for teams (of 3) held by Bina Nusantara University. Top 50 teams from online qualification round (called Indonesia National Contest) will be qualifed to the onsite round. My peak performance in the onsite round was being in 30th place.
 
 - event: ONMIPA
   result: Silver medal
