--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ display_header_contact_info:    "true"
 
 resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
 
-resume_header_intro: "<p>I am a software engineer previously work for Bukalapak as backend engineer. My interests are including, but not limited to, software engineering, algorithms and data structures, and teaching. I am currently seeking an employment as frontend engineer, preferably from a company which use React framework. </p>"
+resume_header_intro: "<p>I am a software engineer previously work for Bukalapak as backend engineer. My interests are including, but not limited to, software engineering, developing algorithm and data structures, and teaching. I am currently seeking an employment as frontend engineer, preferably from a company which use React framework. </p>"
 
 # Decide which sections to use
 # comment out to hide
