--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,7 @@
 - company: Aptargroup, Inc
   position: DevOps Consultant
   duration: Jan, 2020 &mdash; Present
-  summary: CI/CD, legacy and actual software and codebase management/deploy, Kubernetes infrastructure, application monitoring.
+  summary: CI/CD, legacy and actual software and codebase management/deploy, Kubernetes infrastructure, application monitoring, DevOps tool and method research & development.
 # DevOps
 - company: Aesys
   position: DevOps Consultant
