--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@ day-by-day, always looking for new technologies and methods.<br><br>
 Experienced and certified by VMware on virtualization, by Rancher on Kubernetes clusters management.<br><br>
 
 
-Let's config, deploy and destroy. Give me a shell and I'll be happy with it.<br>
+Let's config, deploy and destroy. Give me a shell and I'll be happy with it.
+Hey, find me on <a href='https://medium.com/@tupone.mattia'>Medium</a> too.<br>
 </p>"
 
 # use "yes" to display the email contact button,
