--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,13 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Adam Sealey"
-resume_title:                   "Senior Director, Office of Cybersecurity"
+resume_title:                   "Senior Director, Office of Cybersecurity & Chief of Staff"
 resume_contact_email:           "adam.sealey@gmail.com"
 resume_contact_telephone:       "925-709-4565"
 resume_contact_address:         "Portland, Oregon"
 resume_header_contact_info: "925-709-4565 | adam.sealey@gmail.com"
 resume_header_intro: "<p>Seasoned Cybersecurity Executive experienced in building
-highly effective, data driven security programs and leading through
-transformational change.</p>"
+highly effective, data driven security programs and leading transformational change.</p>"
 #resume_header_intro: "<p>Experienced Information Security and Analytics leader with a demonstrated history of working in retail, government,
 #and higher education. Strong blend of technical capability with a passion for inspiring teams.</p>"
 
