--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,20 +1,31 @@
 # Jobs
 # NIKE
 - company: <a href=http://www.nike.com>NIKE Inc.</a>
-  position: Director, Information Security Governance and Metrics
-  duration: June, 2016 &mdash; Present
-  summary: "Accountable for Enterprise-wide information security program aligned with ISO, including annual review and execution attestation,
-  and ensuring that all security programs operate within program policies. Lead delivery of portfolio-wide metrics, utilized at Board &
-  senior leadership levels, driving risk-based strategic insight.  Oversee security exception and risk register processes, providing
-  foundation for risk-driven strategic alignment across the security portfolio."
+  position: Senior Director, Office of Cybersecurity & Chief of Staff
+  duration: March 2018 &mdash; Present
+  summary: "Senior Cybersecurity executive responsible for leading Strategic development, ensuring cross-Portfolio execution and reporting,
+  and daily business operations for Nike's Enterprise Cybersecurity program.  Also serve as Chief of Staff to the CISO, facilitating leadership
+  execution, and talent lifecycle management across the department."
   accomplishments:
+    - item: Transitioned enterprise-wide cybersecurity strategic process to clearly communicate risk-driven direction to key business stakeholders
+    - item: Oversaw management of >$100m financial portfolio, including annual financial planning cycles
+    - item: Developed all executive storylines and products for briefings to the Nike Inc, Executive Leadership Team, and Board of Directors.
+
+- position: Director, Cybersecurity Governance and Metrics
+  duration: June 2016 &mdash; March 2018
+  #summary: "Accountable for Enterprise-wide information security program aligned with ISO, including annual review and execution attestation,
+  #and ensuring that all security programs operate within program policies. Lead delivery of portfolio-wide metrics, utilized at Board &
+  #senior leadership levels, driving risk-based strategic insight.  Oversee security exception and risk register processes, providing
+  #foundation for risk-driven strategic alignment across the security portfolio."
+  accomplishments:
+    - item: Established Enterprise-wide information security governance program aligned to NIST, including clearly defined portfolio-wide metrics.
     - item: Established Program Governance function, aligning CIS programs with Audit, Governance, and Strategy
     - item: Remediated 7/7 critical audit findings in the first year, including 2 that were previously behind schedule
     - item: Developed, released, and socialized new Data Classification framework, greatly simplifying end user experience
     - item: Led execution & delivery of GRC Quarterly Business Review (QBR), Corporate Strategic Review (CSR), and budget process
 
 - position: Director, Cyber Threat Analytics
-  duration: April 2014 &mdash; May 2016
+  duration: April 2014 &mdash; May, 2016
   # summary:  Summary
   accomplishments:
     - item: Established new analytic team and capability focused on collecting large amounts (> 10TB/day) of security logs and identifying malicious behavior
