--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,13 +3,13 @@
 - company: <a href=http://www.nike.com>NIKE Inc.</a>
   position: Senior Director, Office of Cybersecurity & Chief of Staff
   duration: March 2018 &mdash; Present
-  summary: "Senior Cybersecurity executive responsible for leading Strategic development, ensuring cross-Portfolio execution and reporting,
+  summary: "Senior Cybersecurity executive leading risk-driven Strategic development, ensuring cross-Portfolio execution and reporting,
   and daily business operations for Nike's Enterprise Cybersecurity program.  Also serve as Chief of Staff to the CISO, facilitating leadership
   execution, and talent lifecycle management across the department."
   accomplishments:
     - item: Transitioned enterprise-wide cybersecurity strategic process to clearly communicate risk-driven direction to key business stakeholders
-    - item: Oversaw management of >$100m financial portfolio, including annual financial planning cycles
-    - item: Developed all executive storylines and products for briefings to the Nike Inc, Executive Leadership Team, and Board of Directors.
+    - item: Oversaw management of >$100m financial portfolio, including annual financial planning cycles.
+    - item: Developed all executive storylines and products for briefings to the NIKE Inc. Executive Leadership Team and Board of Directors.
 
 - position: Director, Cybersecurity Governance and Metrics
   duration: June 2016 &mdash; March 2018
