--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ resume_title:                   "Senior Director, Cybersecurity Strategy & Chief
 resume_contact_email:           "adam.sealey@gmail.com"
 resume_contact_telephone:       "925-709-4565"
 resume_contact_address:         "Portland, Oregon"
-resume_header_contact_info: "925-709-4565 | adam.sealey@gmail.com"
+resume_header_contact_info:     "adam.sealey@gmail.com | 925-709-4565"
+display_header_contact_info:    "true"
 resume_header_intro: "<p>Strategic, data-driven Cybersecurity Executive with 15+ years' experience
 across multiple industries, including Retail (Nike), Higher Education, and Government.  A results-oriented leader with
 a proven track record of results in risk-driven strategic development, organizational transformation,
