--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,12 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree: 중퇴
+  uni: 부산외국어 대학
+  year: 2013 &mdash; 2014
   awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+  summary:
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
+- degree: 고등학교 졸업
+  uni: 사상고등학교
+  year: 20010 &mdash; 2013
+  award: 전국 창의력 올림피아드 우수상
   summary: You can choose to have either a single or multiple awards
