--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,7 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree Conferred: Bachelor of Science (Cum Laude)
+  uni: Handong Global University(한동대학교)
+  year: 2008 &mdash; 2016
   awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
-
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+    - award: Cumme Laude graduate
+  summary: Life Science(Major), Computer Science(Minor)
