--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,4 +4,4 @@
   year: 2008 &mdash; 2016
   awards:
     - award: Cumme Laude graduate
-  summary: Life Science(Major), Computer Science(Minor)
+  summary: 생명과학(주), 컴퓨터 과학(부)
