--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,6 +1,2 @@
 # Interests
-- description: Music;
-- description: Art;
-- description: Reading;
-- description: Writing;
-- description: Drawing.
+- description: Music, art, reading, drawing.
