--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,4 +1,36 @@
 # Skills
+- skill: DevOps
+  description: <ul class="resume-item-list">
+    <li>Docker/Docker Swarm</li>
+    <li>Kubernetes</li>
+    <li>Rancher</li>
+    <li>AWX (Ansible Tower)</li>
+    <li>Terraform</li>
+    </ul>
+
+- skill: Cloud Platforms
+  description: <ul class="resume-item-list">
+    <li>Microsoft Azure</li>
+    <li>DigitalOcean</li>
+    <li>Amazon AWS</li>
+    <li>Hetzner</li>
+    </ul>
+
+- skill: Monitoring
+  description: <ul class="resume-item-list">
+    <li>Zabbix</li>
+    <li>Prometheus/Grafana stack</li>
+    <li>ELK stack</li>
+    <li>APM Server</li>
+    </ul>
+    
+- skill: CI/CD
+  description: <ul class="resume-item-list">
+    <li>CircleCI</li>
+    <li>Jenkins</li>
+    <li>GitLab CI/CD</li>
+    </ul>
+
 - skill: Systems
   description: <ul class="resume-item-list">
     <li>Configuration and installation of hardware/software systems</li>
@@ -16,55 +48,11 @@
     <li>Set up and manage SSL VPN systems</li>
     </ul>
 
-- skill: Programming
-  description: <ul class="resume-item-list">
-    <li>HTML/CSS</li>
-    <li>JavaScript, TypeScript</li>
-    <li>Python</li>
-    <li>PHP</li>
-    <li>Bash and Python scripting</li>
-    <li>Basic knowledge of C, C#, C++</li>
-    </ul>
-
 - skill: Databases
   description: <ul class="resume-item-list">
     <li>MySQL</li>
     <li>SQL Server 2012/2014</li>
     <li>PostgreSQL</li>
-    </ul>
-
-- skill: Cloud Platforms
-  description: <ul class="resume-item-list">
-    <li>Microsoft Azure</li>
-    <li>DigitalOcean</li>
-    <li>Amazon AWS</li>
-    <li>Hetzner</li>
-    </ul>
-
-- skill: DevOps
-  description: <ul class="resume-item-list">
-    <li>Docker</li>
-    <li>Docker Swarm</li>
-    <li>Kubernetes</li>
-    <li>Rancher</li>
-    <li>AWX (Ansible Tower)</li>
-    <li>GitOps</li>
-    <li>Terraform</li>
-    </ul>
-
-- skill: Monitoring
-  description: <ul class="resume-item-list">
-    <li>Zabbix</li>
-    <li>Netdisco</li>
-    <li>Prometheus</li>
-    <li>ELK stack</li>
-    <li>APM Server</li>
-    </ul>
-    
-- skill: CI/CD
-  description: <ul class="resume-item-list">
-    <li>CircleCI</li>
-    <li>Jenkins</li>
     </ul>
 
 - skill: Version Control Systems
@@ -75,9 +63,17 @@
     <li>Azure DevOps</li>
     </ul>
 
+- skill: Programming
+  description: <ul class="resume-item-list">
+    <li>HTML/CSS</li>
+    <li>JavaScript, TypeScript</li>
+    <li>PHP</li>
+    <li>Bash, PowerShell and Python scripting</li>
+    <li>Basic knowledge of C, C#, C++</li>
+    </ul>
+
 - skill: Various
   description: <ul class="resume-item-list">
     <li>Kafka</li>
-    <li>Spring</li>
     <li>Basic SAP knowledge</li>
     </ul>
