Updated Acclaim link.

--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -10,4 +10,5 @@
   summary:  <p>Certification Date - Saturday, September 16, 2017<br>
                Valid Through - Monday, September 16, 2019<br>
                Candidate ID - VMW-02120218G-00616311<br>
-               Renewal Date - Saturday, September 16, 2017</p>
+               Renewal Date - Saturday, September 16, 2017<br>
+               <a href="https://www.youracclaim.com/earner/earned/badge/a334b4ba-2248-4d0d-b0d3-89e1f7cfc909">View my badge on Acclaim.</a></p>
