--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -4,6 +4,7 @@
   year: 2020
   summary:  <p>Certification Date - June 10, 2020<br>
                Certification ID - Va22a11b07c734d9dba6c9a6cc7749bcb<br>
+               <a href="https://academy.rancher.com/certificates/a22a11b07c734d9dba6c9a6cc7749bcb">View my certificate on Rancher Academy.</a></p>
 - award: VMware Certified Professional 6 - Data Center Virtualization
   organization: (VCP6-DCV), VMware
   year: 2017
