--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -12,4 +12,4 @@
                Valid Through - Monday, September 16, 2019<br>
                Candidate ID - VMW-02120218G-00616311<br>
                Renewal Date - Saturday, September 16, 2017<br>
-               <a href="https://www.youracclaim.com/earner/earned/badge/a334b4ba-2248-4d0d-b0d3-89e1f7cfc909">View my badge on Acclaim.</a></p>
+               <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a334b4ba-2248-4d0d-b0d3-89e1f7cfc909" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>/p>
