--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -4,6 +4,9 @@
   year: 2020
   summary:  <p>Certification Date - June 10, 2020<br>
                Certification ID - Va22a11b07c734d9dba6c9a6cc7749bcb<br>
+               <a href="https://academy.rancher.com/certificates/a22a11b07c734d9dba6c9a6cc7749bcb">
+                <img src="images/RANCHER K101 Certificate _ Rancher Academy-1.png" alt="My certificate on Rancher" style="width:42px;height:42px;">
+               </a>
                <img src="images/RANCHER K101 Certificate _ Rancher Academy-1.png" alt="<a href="https://academy.rancher.com/certificates/a22a11b07c734d9dba6c9a6cc7749bcb">View my certificate on Rancher Academy.</a>" width="800px" height="500px"/>
                <a href="https://academy.rancher.com/certificates/a22a11b07c734d9dba6c9a6cc7749bcb">View my certificate on Rancher Academy.</a></p>
 - award: VMware Certified Professional 6 - Data Center Virtualization
